--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -1,7 +1,9 @@
 $colour-primary: #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
+$grey-primary: rgb(245, 245, 245);
 
 $breakpoint-mobile: 500px;
 
 $font-primary: "roboto";
+$font-secondary: "Shrikhand", cursive;
