--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,5 +10,7 @@
 
 @import "./layout/card";
 @import "./layout/header";
+@import "./layout/footer";
 
 @import "./pages/home";
+@import "./pages/menu";
