--- a/sass/Layout/_card.scss
+++ b/sass/Layout/_card.scss
@@ -38,13 +38,27 @@
         font-size: 18px;
         padding-bottom: 5px;
     }
-    &__where {
+    &__subtitle {
         font-weight: 400;
-        font-size: 16px;
+        font-size: 14px;
     }
     &__icon{
         position: absolute;
         right: 10%;
         bottom: 50%;
+    }
+    &__menu {
+        position: relative;
+        padding: 15px;
+        margin: 15px 10px;
+        background-color: white;
+        border-radius: 20px 20px;
+        box-shadow: 0px 1px 10px rgb(224, 224, 224);
+    }
+    &__price {
+        position: absolute;
+        right: 10%;
+        bottom: 15px;
+        font-weight: bold;
     }
 }
