--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 
 @import "./utils/variables";
 @import "./utils/typography";
+@import "./utils/mixins";
 
 @import "./base/reset";
 @import "./base/base";
