--- a/sass/Pages/_home.scss
+++ b/sass/Pages/_home.scss
@@ -2,12 +2,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
     background-color: rgb(233, 233, 233);
     padding: 15px 0;
+    &__block {
+        position: relative;
+    }
     &__icon {
         position: absolute;
-        left: 26%;
+        left: -30px;
     }
     &__text {
         font-size: 17px;
@@ -32,6 +34,11 @@
     &__title {
         padding-bottom: 20px;
     }
+    @include tablette-only {
+        .buttons-home {
+            display: flex;
+        }
+    }
 }
 
 .restaurants-home {
@@ -45,4 +52,8 @@
 .card-list {
     display: flex;
     flex-flow: wrap column;
+    @include desktop-only {
+        flex-flow: row wrap;
+        width: 100%;
+    }
 }
