--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -3,7 +3,10 @@ $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
 $grey-primary: rgb(245, 245, 245);
 
-$breakpoint-mobile: 500px;
+$breakpoints: (
+  tablette: 768px,
+  desktop: 992px
+);
 
 $font-primary: "roboto";
 $font-secondary: "Shrikhand", cursive;
