--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -1,8 +1,9 @@
 .page-footer {
     background-color: rgba(0, 0, 0, 0.774);
-    color: white;
     padding: 20px 10px;
+    animation : loader 0ms $delay-loader both;
     &__img{
+        color: white;
         font-family: $font-secondary;
         padding: 10px 0;
         font-weight: 500;
@@ -13,6 +14,8 @@
     list-style-type: none;
     &__item {
         padding: 5px 0px;
+        text-decoration: none;
+        color: white;
     }
     &__icon1 {
         padding-right: 12px;
