--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./base/base";
 
 @import "./components/button";
+@import "./components/loader";
 
 @import "./layout/card";
 @import "./layout/header";
