--- a/sass/Layout/_card.scss
+++ b/sass/Layout/_card.scss
@@ -1,11 +1,8 @@
 .card {
-    width: 100%;
     background-color: white;
-    border-radius: 20px 20px;
-    margin: 15px auto;
-    box-shadow: 0px 1px 10px rgb(224, 224, 224);
     text-decoration: none;
     color: black;
+    
     &__top{
         height: 180px;
         border-radius: 20px 20px 0px 0px;
@@ -41,11 +38,11 @@
     &__subtitle {
         font-weight: 400;
         font-size: 14px;
-    }
-    &__icon{
-        position: absolute;
-        right: 10%;
-        bottom: 50%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 100%;
+        transition: transform 500ms ease-in-out;
     }
     &__menu {
         position: relative;
@@ -54,14 +51,40 @@
         background-color: white;
         border-radius: 20px 20px;
         box-shadow: 0px 1px 10px rgb(224, 224, 224);
+        overflow: hidden;
+        &:hover > .card__check {
+            transform: translate(-100%, 0);
+        }
+        &:hover .card__check--icon {
+            transform: rotate(360deg);
+        }
     }
     &__price {
-        position: absolute;
-        right: 10%;
-        bottom: 15px;
         font-weight: bold;
+        transition: transform 500ms ease-in-out;
+        text-align: right;
     }
-    @include desktop-only {
-        width: 45%;
+    &__check {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $colour-tertiary;
+        width: 18%;
+        height: 100%;
+        right: -18%;
+        bottom: 0;
+        transition: transform 500ms ease-in-out;
+        &--icon {
+            background-color: white;
+            border-radius: 50%;
+            color: $colour-tertiary;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 20px;
+            height: 20px;
+            transition: transform 500ms ease-in-out;
+        }
     }
 }
